tests/baselines/reference/typePredicatesInUnion.errors.txt
typePredicatesInUnion.ts(2,23): error TS2677: A type predicate's type must be assignable to its parameter's type.
  Type 'boolean' is not assignable to type '{}'.
typePredicatesInUnion.ts(5,23): error TS2677: A type predicate's type must be assignable to its parameter's type.
  Type 'string' is not assignable to type '{}'.


==== typePredicatesInUnion.ts (2 errors) ====
    interface A {
        pred(x: {}): x is boolean;
                          ~~~~~~~
!!! error TS2677: A type predicate's type must be assignable to its parameter's type.
!!! error TS2677:   Type 'boolean' is not assignable to type '{}'.
    }
    interface B {
        pred(x: {}): x is string;
                          ~~~~~~
!!! error TS2677: A type predicate's type must be assignable to its parameter's type.
!!! error TS2677:   Type 'string' is not assignable to type '{}'.
    }
    
    type Or = A | B;
    
    function f(o: Or, x: {}) {
        if (o.pred(x)) {
            x;
        }
    }
    